--- a/about.html
+++ b/about.html
@@ -3,17 +3,24 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Page</title>
+    <title>Moon Page</title>
     <link rel="stylesheet" href="screen.css">
   </head>
   <body>
-    <h1>About Page</h1>
+    <h1>Moon</h1>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html" class="active">About</a></li>
+        <li><a href="index.html">Earth</a></li>
+        <li><a href="about.html" class="active">Moon</a></li>
       </ul>
     </nav>
+
+    <h2>
+      text
+    </h2>
+
+    <img src="images/Moon.jpg" alt="moon">
+
     <script src="index.js"></script>
   </body>
 </html>
