--- a/index.html
+++ b/index.html
@@ -3,17 +3,24 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>Earth Page</title>
     <link rel="stylesheet" href="screen.css">
   </head>
   <body>
-    <h1>Home</h1>
+    <h1>Earth</h1>
     <nav>
       <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="index.html" class="active">Earth</a></li>
+        <li><a href="about.html">Moon</a></li>
       </ul>
     </nav>
+
+    <h2>
+      text
+    </h2>
+
+    <img src="images/Earth.jpg" alt="earth">
+
     <script src="index.js"></script>
   </body>
 </html>
