Initial css changes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     </nav>
 
     <h2>
-      text
+      Earth is basically the ultimate “farm-to-table” experience — except it’s a bit more like “dirt-to-harvest” and “sun-to-sunburn” when you’re out in the fields. It’s like a giant, unpredictable crop rotation system, with weather patterns that change faster than a student deciding their major. One minute it’s sunny and perfect for planting, the next it’s a monsoon that makes you question why you ever left the greenhouse. But hey, at least Earth keeps things interesting—never a dull moment when you’re trying to figure out if your soil’s pH level is your friend or foe. So, here’s to the planet that gives us everything we need, and occasionally throws in a hailstorm for character building!
+      "give me a funny paragraph about the earth with the intended audience being agriculture college students"
     </h2>
 
     <img src="images/Earth.jpg" alt="earth">
