--- a/about.html
+++ b/about.html
@@ -16,7 +16,8 @@
     </nav>
 
     <h2>
-      text
+      The Moon is like Earth’s quirky cousin who never quite figured out how to farm. Sure, it’s got the whole “gravitational pull” thing down, but good luck trying to grow anything up there. With zero atmosphere, no water, and temperatures that swing from “I need a parka” to “I’m basically in an oven,” the Moon is basically a giant cosmic rock that serves as a reminder that sometimes, nature really knows how to give you the cold shoulder. Still, it’s a great place to practice your “moonwalking” skills and pretend you’re the first astronaut to ever crop-dust the surface of an airless wasteland. Don’t forget to pack your seeds—just don’t expect anything to grow. The Moon’s more into moonbeams than green beans.
+      "give me a funny paragraph about the moon with the intended audience being agriculture college students"
     </h2>
 
     <img src="images/Moon.jpg" alt="moon">
